--- a/patient_portal/public/index.html
+++ b/patient_portal/public/index.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <!-- Roboto font for material ui -->
-    <title>React App</title>
+    <title>Patient Portal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
